# Todori

./: .README.md.swp  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
src/: app.css  app.html
src-tauri/: .Cargo.toml.swp  Cargo.toml  build.rs
src-tauri/src/: commands.rs  lib.rs
src/lib/: types.ts
src/lib/actions/: autoFocus.ts  clickOutside.ts  tapHold.ts
src/lib/components/: .TodoItem.svelte.swp  AddButton.svelte  AddSubButton.svelte  DropdownMenu.svelte  InlineEditor.svelte  ProgressBar.svelte  SubItem.svelte  SubTask.svelte  TaskHeader.svelte  TaskItem.svelte  TaskList.svelte  TaskNode.svelte  TodoItem.svelte  TodoList.svelte  TodoTree.svelte  index.ts
src/lib/helpers/: menus.ts
src/lib/stores/: .todos.ts.swp  Navigation.ts  TaskStore.ts  todos.ts
src/routes/: +layout.svelte  +page.svelte
