[package]
name = "todori"
version = "0.1.1"
description = "A Tauri App"
authors = ["U-Keun"]
edition = "2021"
build = "build.rs"
license = "MIT"      
repository = "https://github.com/U-Keun/ToDori"
homepage = "https://github.com/U-Keun/Todori"

include = [
    "build.rs",
    "Cargo.toml",
    "src/**",
    "tauri.conf.json",
    "icons/**",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "todo_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.5", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.release]
tag-prefix = "v"               
allow-branch = ["main"]       
pre-release-hook = [
  "bash", "-lc", "cd ../ && npm version ${level} --no-git-tag-version"
]
